update: improve reponsive for mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header start -->
     <header>
       <!-- TODO: menampilkan header -->
-      <img src="images/ffc_logo.png" alt="company logo" srcset="" style="width: 200px;">
+      <a href="/index.html"> <img src="images/ffc_logo.png" alt="company logo" srcset="" style="width: 200px;"></a>
     </header>
     <!-- Header end -->
 
@@ -43,23 +43,29 @@
     <!-- main start -->
     <main>
       <!-- TODO: menampilkan isi content website-->
-      <div id="exercises">
+      <div id="exercises" style="margin-bottom: 50px;">
         <h1>Cummon Exercises</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem.
+        </p>
+        <h3>Lorem, ipsum.</h3>
+        <p class="margin-exercise">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime
+          exercitationem
           voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus nulla ea officiis
           hic, minus ad. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime
           exercitationem voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus
           nulla ea officiis hic, minus ad. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis
           ipsam error maxime exercitationem voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos
           provident natus nulla ea officiis hic, minus ad.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem
+        <h3>Lorem, ipsum.</h3>
+        <p class="margin-exercise">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem
           voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus nulla ea officiis
           hic, minus ad. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime
           exercitationem voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus
           nulla ea officiis hic, minus ad. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis
           ipsam error maxime exercitationem voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos
           provident natus nulla ea officiis hic, minus ad.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem
+        <h3>Lorem, ipsum.</h3>
+        <p class="margin-exercise">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime exercitationem
           voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus nulla ea officiis
           hic, minus ad. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae facilis ipsam error maxime
           exercitationem voluptatem aliquid deserunt temporibus, asperiores labore, ipsa dignissimos provident natus
